Adjust client for sending

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -91,7 +91,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Junk\OldCode.txt" />
-    <Content Include="newphantom.dll" />
+    <Content Include="newphantom.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
